# Cal-PIT

./: .replit  README.md  ai_helper.py  app.py  database.py  dependencies.txt  desktop_app.py  function_utils.py  pyproject.toml  run_desktop.py  visualization.py
