[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "openai>=1.78.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "sympy>=1.14.0",
]
